[package]
name = "gaia-sensor-logger"
version = "0.0.1"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full", "sync"] }
rumqttc = "0.25.0"
mongodb = "3.0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0.100"
once_cell = "1.21.3"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-native-tls", "macros", "time"] }
chrono = { version = "0.4.42", features = ["serde"] }
bson = { version = "3.0.0", features = ["serde"] }
dotenvy = "0.15.7"
rocket = { version = "0.5.1", features = ["json"] }

